Fix header date on small devices

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,8 @@
 
 .Header__Right {
 	line-height: var(--yc-text-display-2-line-height);
-	white-space: nowrap;
+	display: flex;
+    align-items: center;
 }
 
 .Header__H1 {
